objects/PMV_Team_View__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>AvgAmountOpportunityRelationship__c</fullName>
        <label>AvgAmountOpportunityRelationship</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BigOpportunityAmountThreshold__c</fullName>
        <label>BigOpportunityAmountThreshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BigOpportunityCountThreshold__c</fullName>
        <label>BigOpportunityCountThreshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>User_Role_Id__c</fullName>
        <label>User Role Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>PMV Team View</label>
</CustomObject>